# dice_problem_solver

./: .gitignore  CMakeLists.txt  README.md  README_en.md  README_fr.md  calc_coba.c  calc_coba.h  calc_odin.c  calc_odin.h  convert_solutions_to_utf8.sh  main.c  solutions.txt  solutions_utf8.txt  structs.c  structs.h
